tests/rosetta/out/Java/csv-to-html-translation-5.error
javac error: exit status 1
/tmp/TestMochiToJavacsv-to-html-translation-5940041611/001/CsvToHtmlTranslation5.java:42: error: incompatible types: String cannot be converted to int
    int c = "Character,Speech\n" + "The multitude,The messiah! Show us the messiah!\n" + "Brians mother,<angry>Now you listen here! He's not the messiah; he's a very naughty boy! Now go away!</angry>\n" + "The multitude,Who are you?\n" + "Brians mother,I'm his mother; that's who!\n" + "The multitude,Behold his mother! Behold his mother!";
            ^
/tmp/TestMochiToJavacsv-to-html-translation-5940041611/001/CsvToHtmlTranslation5.java:44: error: incompatible types: int cannot be converted to String
    for (String line : split(c, "\n")) {
                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
