tests/rosetta/out/Java/csv-to-html-translation-5.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:33:16Z
// csv-to-html-translation-5.mochi
import java.util.*;

public class CsvToHtmlTranslation5 {
    static List<String> split(String s, String sep) {
        List<String> out = Arrays.asList();
        int start = 0;
        int i = 0;
        int n = sep.length();
        while (i <= s.length() - n) {
            if (Objects.equals(s.substring(i, i + n), sep)) {
                out.add(s.substring(start, i));
                i = (int)(i + n);
                start = (int)(i);
            }
            else {
                i = (int)(i + 1);
            }
        }
        out.add(s.substring(start, s.length()));
        return out;
    }
    static String htmlEscape(String s) {
        String out = "";
        int i = 0;
        while (i < s.length()) {
            String ch = s.substring(i, i + 1);
            if (Objects.equals(ch, "&")) {
                out = out + "&amp;";
            }
            i = (int)(i + 1);
        }
        return out;
    }
    static <T> List<T> append(List<T> list, T item) {
        List<T> res = new ArrayList<>(list);
        res.add(item);
        return res;
    }
    public static void main(String[] args) {
    int c = "Character,Speech\n" + "The multitude,The messiah! Show us the messiah!\n" + "Brians mother,<angry>Now you listen here! He's not the messiah; he's a very naughty boy! Now go away!</angry>\n" + "The multitude,Who are you?\n" + "Brians mother,I'm his mother; that's who!\n" + "The multitude,Behold his mother! Behold his mother!";
    List<List<String>> rows = Arrays.asList();
    for (String line : split(c, "\n")) {
        rows.add(split(line, ","));
    }
    System.out.println("<table>");
    for (List<String> row : rows) {
        String cells = "";
        for (String cell : row) {
            cells = cells + "<td>" + htmlEscape(cell) + "</td>";
        }
        System.out.println("    <tr>" + cells + "</tr>");
    }
    System.out.println("</table>");
    }
}
